@@ -1,7 +1,9 @@
 package com.github.jaksonlin.testcraft.presentation.components;
 
-import com.github.jaksonlin.testcraft.util.MyBundle;
-import com.github.jaksonlin.testcraft.messaging.observers.BasicEventObserver;
+import com.github.jaksonlin.testcraft.infrastructure.messaging.events.RunHistoryEvent;
+import com.github.jaksonlin.testcraft.infrastructure.messaging.events.TypedEventObserver;
+import com.github.jaksonlin.testcraft.infrastructure.services.system.EventBusService;
+import com.github.jaksonlin.testcraft.infrastructure.services.system.I18nService;
 import com.github.jaksonlin.testcraft.util.Pair;
 import org.jetbrains.annotations.NotNull;
 
@@ -13,30 +15,34 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-public class ObservableTree extends JTree implements BasicEventObserver {
+public class ObservableTree extends JTree  {
 
-    @Override
-    public void onEventHappen(String eventName,Object eventObj) {
-        if (!eventName.equals("RUN_HISTORY")) {
-            return;
-        }
-        if (eventObj == null) {
-            initializeMutationTree(Collections.emptyList());
-        } else if (eventObj instanceof Pair) {
-            Pair<?, ?> pair = (Pair<?, ?>) eventObj;
-            if (pair.getFirst() instanceof String && pair.getSecond() instanceof String) {
-                updateMutationTree(new Pair<>((String) pair.getFirst(), (String) pair.getSecond()));
+    private final TypedEventObserver<RunHistoryEvent> eventObserver = new TypedEventObserver<RunHistoryEvent>(RunHistoryEvent.class) {
+        @Override
+        public void onTypedEvent(RunHistoryEvent event) {
+            if (!event.getEventType().equals(RunHistoryEvent.RUN_HISTORY)) {
+                return;
             }
-        } else if (eventObj instanceof List) {
-            List<?> list = (List<?>) eventObj;
-            if (list.isEmpty()) {
+            if (event.getPayload() == null) {
                 initializeMutationTree(Collections.emptyList());
-            } else if (list.get(0) instanceof Pair) {
-                List<Pair<String, String>> nodeList = (List<Pair<String, String>>) list;
-                initializeMutationTree(nodeList);
+            } else if (event.getPayload() instanceof Pair) {
+                Pair<?, ?> pair = (Pair<?, ?>) event.getPayload();
+                if (pair.getFirst() instanceof String && pair.getSecond() instanceof String) {
+                    updateMutationTree(new Pair<>((String) pair.getFirst(), (String) pair.getSecond()));
+                }
+            } else if (event.getPayload() instanceof List) {
+                List<?> list = (List<?>) event.getPayload();
+                if (list.isEmpty()) {
+                    initializeMutationTree(Collections.emptyList());
+                } else if (list.get(0) instanceof Pair) {
+                    List<Pair<String, String>> nodeList = (List<Pair<String, String>>) list;
+                    initializeMutationTree(nodeList);
+                }
             }
         }
-    }
+    };
+
+      
 
     private void initializeMutationTree(@NotNull List<Pair<String, String>> nodeNameList) {
         DefaultTreeModel treeModel = buildTreeModel(nodeNameList);
@@ -44,7 +50,7 @@ public class ObservableTree extends JTree implements BasicEventObserver {
     }
 
     private DefaultTreeModel buildTreeModel(@NotNull List<Pair<String, String>> nodeNameList) {
-        DefaultMutableTreeNode root = new DefaultMutableTreeNode(MyBundle.message("mutation.tree.root"));
+        DefaultMutableTreeNode root = new DefaultMutableTreeNode(I18nService.getInstance().message("mutation.tree.root"));
 
         for (Pair<String, String> pair : nodeNameList) {
             String packageName = pair.getFirst();
